# buzz

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  README.md  RELEASING.md  TESTING.md  VISION.md  VISION_MODERATION.md  WIP.md  attacks-reviewed.md  attacks.md  crypto.md  deny.toml  docker-compose.harness.yml  docker-compose.yml  features.json  justfile  lefthook.yml  pnpm-lock.yaml  pnpm-workspace.yaml  preview-features.json  report.md
.cargo/: config.toml
.github/workflows/: auto-tag-on-release-pr-merge.yml  ci.yml  docker.yml  formal-proofs.yml  release.yml  sync-release-changelog.yml
RESEARCH/: CHAT_BASE_TYPE_SCALE.md  TIMELINE_ZOOM_REM_REGRESSION.md
crates/buzz-acp/: README.md
crates/buzz-acp-node-launcher/: Cargo.toml
crates/buzz-acp-node-launcher/src/: main.rs
crates/buzz-acp-node-launcher/tests/: launcher.rs
crates/buzz-agent/: README.md
crates/buzz-conformance/: Cargo.toml
crates/buzz-conformance/src/: checker.rs  lib.rs  transitions.rs
crates/buzz-media/: Cargo.toml
crates/buzz-pairing-cli/: README.md
crates/buzz-push-gateway/: Cargo.toml
crates/buzz-push-gateway/src/: apns.rs  config.rs  grant.rs  http.rs  lib.rs  main.rs  model.rs  strict_json.rs
crates/buzz-relay/: CHANGELOG.md  Cargo.toml
crates/buzz-search/: Cargo.toml
crates/buzz-search/src/: error.rs  lib.rs  query.rs
crates/buzz-search/tests/: fts_integration.rs
crates/buzz-workflow/: Cargo.toml
crates/sprout-cli/: Cargo.toml  TESTING.md
crates/sprout-core/: Cargo.toml
crates/sprout-relay/: Cargo.toml
crates/sprout-test-client/: Cargo.toml
deploy/compose/: README.md  compose.dev.yml  compose.yml  run.sh
desktop/: acp-tools.lock.json  index.html  package.json  playwright.config.ts  playwright.perf-webkit.config.ts  tailwind.config.js  test-dom-loader-hooks.mjs  test-dom-setup.mjs  test-loader-hooks.mjs  tsconfig.json  vite.config.ts
desktop/scripts/: build-release-config.mjs  check-file-sizes.mjs  check-px-text.mjs  ensure-acp-tools.sh  generate-kinds.mjs  prepare-acp-tools-resource.sh  set-dmg-finder-text-size.sh  update-acp-tools-lock.mjs
desktop/src/: features-manifest.d.ts  main.tsx  upng-js.d.ts  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
docs/: MCP_DRIVEN_HOOKS.md  README.md  bridge-channel-window.md  buzz-shared-compute-dev.md  git-on-object-storage.md  mesh-llm-local-build.md  multi-tenant-relay.md  welcome-kickoff-silent-failures.md
docs/architecture/: connection-lifecycle.md  crates.md  event-pipeline.md  infrastructure.md  overview.md  protocol.md  (+2 more)
migrations/: 0001_initial_schema.sql  0002_backfill_d_tag.sql  0006_moderation.sql  0007_nip_rs_retention.sql  0007_push_leases.sql  0008_fresh_install_search_allowlist.sql  0008_push_endpoint_state.sql  0009_nip_rs_database_guards.sql  0009_push_lease_fts.sql  0010_nip_rs_exact_replay_guard.sql  0011_nip_rs_exact_tag_cardinality.sql  0012_community_archival.sql  0012_push_leases.sql  0014_push_lease_fts.sql  0015_push_gateway_authority.sql  0019_mesh_status_retention.sql
mobile/: CHANGELOG.md  README.md  pubspec.yaml
patches/: isomorphic-git@1.38.3.patch
perf/: RELAY_BUS_SCALING.md  relay_bus_scaling.py
schema/: schema.sql
scripts/: attach-schema-partitions.sql  bundle-sidecars.sh  check-px-text-core.mjs  dev-reset.sh  dev-setup.sh  e2e-git-perms.sh  e2e-relay-membership.sh  instance-env.sh  reset-desktop-dev-state.sh  run-tests.sh  setup-desktop-test-data.sh  stage-windows-bash.sh  start-isolated-test-relay.sh  start-relay-for-tests.sh  test-release-ref-contract.sh
web/: package.json
(+1520 files in other folders)
