[package]
name = "buzz-acp-node-launcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Compiled launcher shim for the bundled ACP bridge tools on Windows"

[[bin]]
name = "buzz-acp-node-launcher"
path = "src/main.rs"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_JobObjects"] }

[dev-dependencies]
tempfile = "3"
