[package]
name = "buzz-push-gateway"
description = "Blind, capability-gated NIP-PL gateway for the Buzz mobile app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "buzz_push_gateway"
path = "src/lib.rs"

[[bin]]
name = "buzz-push-gateway"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
axum = { workspace = true }
async-trait = "0.1"
base64 = "0.22"
chrono = { workspace = true }
nostr = { workspace = true }
p256 = { version = "0.14", features = ["ecdsa", "pem", "pkcs8"] }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
reqwest = { workspace = true }
