[package]
name = "buzz-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Postgres full-text search for Buzz, scoped by community"

[dependencies]
buzz-core   = { workspace = true }
sqlx        = { workspace = true }
uuid        = { workspace = true }
thiserror   = { workspace = true }

[dev-dependencies]
tokio       = { workspace = true }
